# mStream

./: .dockerignore  .gitignore  Changes-Velvet.md  Dockerfile  README.md  changes-adminGUIv2.md  changes-fork-velvet.md  changes4GUIv2.md  check-sade.cjs  check-vpath-morales.cjs  check_calvin.cjs  checktoday.cjs  cleanup-albumart.mjs  cli-boot-wrapper.js  compose.yaml  dev-app-update.yml  docker-entrypoint.sh  inspect-schema.cjs  package-lock.json  package.json  restore_discogs_refs.cjs  test_artist_img.cjs  todo.md  wrapped.md
.claude/: settings.local.json
.github/: copilot-instructions.md  dependabot.yml
docs/: API.md  Mauri_tags.md  acoustid.md  album-browser-design.md  albums-only.md  albums.md  artists-design.md  artists.md  audio-analysis.md  audio-output.md  audiobooks.md  backup.md  browse-decades-genres.md  browser-compat.md  cerrone-version-verify.md  cue-sheet-markers.md  deploy.md  directory-access-test.md  dlna.md  docker.md  electron.md  home-view.md  i18n-admin.md  i18n.md  install.md  json_config.md  keyboard-shortcuts.md  listenbrainz.md  localstorage.md  metadata-fallback.md  podcasts.md  replaygain-info.md  replaygain-plan.md  rust-parser-compatibility.md  scan-error-audit.md  scan-progress.md  scanning.md  search.md  server-audio.md  smart-playlists.md  (+9 more)
releases/: v5.15.1-velvet.md  v5.15.2-velvet.md  v5.15.3-velvet.md  v5.16.0-velvet.md  v5.16.1-velvet.md  v5.16.10-velvet.md  v5.16.11-velvet.md  v5.16.12-velvet.md  v5.16.13-velvet.md  v5.16.14-velvet.md  v5.16.15-velvet.md  v5.16.16-velvet.md  (+101 more)
rust-parser/: Cargo.toml
rust-parser/src/: main.rs
(+167 files in other folders)
