[package]
name = "rust-parser"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rust-parser"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
lofty = "0.22"
walkdir = "2"
md5 = "0.7"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }

[profile.release]
strip = true
